--- a/README.mkd
+++ b/README.mkd
@@ -7,6 +7,6 @@ The N-queens puzzle is the problem of placing N chess queens on an N×N chessboa
 The puzzle is solved as a CSP problem, using backtracking search. Forward checking is used to limit the size of the search space. The next unassigned variable is selected at random.
 
 # Usage #
-`./nqueens <N>`
+`./nqueens.rb <N>`
 
 where N is the number of queens to place on a NxN chessboard
