--- a/README.mkd
+++ b/README.mkd
@@ -10,3 +10,23 @@ The puzzle is solved as a CSP problem, using backtracking search. Forward checki
 `./nqueens.rb <N>`
 
 where N is the number of queens to place on a NxN chessboard
+
+# A Solution #
+
+<code>
+----------------------------------------------------------------------
+Solving the 8-queens problem...
+----------------------------------------------------------------------
+----------------------------------------------------------------------
+Solution: {0=>4, 5=>2, 3=>5, 6=>0, 7=>6, 4=>7, 1=>1, 2=>3}
+Found a solution in 0.0 seconds
+----------------------------------------------------------------------
+0 0 0 0 0 0 X 0 
+0 X 0 0 0 0 0 0 
+0 0 0 0 0 X 0 0 
+0 0 X 0 0 0 0 0 
+X 0 0 0 0 0 0 0 
+0 0 0 X 0 0 0 0 
+0 0 0 0 0 0 0 X 
+0 0 0 0 X 0 0 0 
+</code>
